2008-10-16  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (frame-catch-tags): Disabled as it prevents
	FRAME-LOCALS from working in lx8632.

2008-10-10  Nikodemus Siivola <nikodemus@random-state.net>

	* slime.el (slime-inspector-toggle-verbose): New function.
	(slime-inspector-mode-map): Bind v to slime-inspector-toggle-verbose.
	(slime-cheat-sheet-table): Add slime-inspector-toggle-verbose.
	* swank.lisp (*inspector-verbose*): New variable.
	([defstruct] istate): New slot called verbose.
	(istate>elisp): If the current istate is verbose, use untruncated result of
	TO-STRING as the title.
	(inspect-nth-part): Use the verbosity of the current istate.
	* doc/slime.texi: Document slime-inspector-toggle-verbose.

2008-10-07  Nikodemus Siivola <nikodemus@random-state.net>

	* swank.lisp (*backtrace-printer-bindings*): export.

2008-10-05  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (list-callers): Do a full GC before calling
	map-allocated-objects. That's needed because map-allocated-objects
	seems to cons even if it's inlined.
	(emacs-inspect [code-component]): Try to detect
	byte-code-components.

	(inspect-alien-record, mv-function-end-breakpoint-values): Avoid
	compiler warnigns.

2008-10-04  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-sbcl.lisp: Add support for WHO-SPECIALIZES. This requires
	a patch for SBCL's SB-INTROSPECT contrib which I sent upstream a
	few minutes ago.

2008-10-04  Helmut Eller  <heller@common-lisp.net>

	Some cleanups for compilation commands.

	* slime.el ([defstruct] slime-compilation-result): Rename result
	slot as successp.
	(slime-make-compilation-finished-continuation): Deleted.
	slime-eval-async preserves the current buffer and preserving the
	window-configuration was always a questionable feature.
	(slime-compilation-finished): Simplified.
	(slime-show-note-counts): Also show the success/failure flag.
	(slime-recompile-locations): Take a continuation as argument